[gd_scene load_steps=12 format=3 uid="uid://todfy31rk10k"]

[ext_resource type="Script" path="res://entities/character/player/Player.gd" id="1_p38sd"]
[ext_resource type="PackedScene" uid="uid://drggou0b6niiw" path="res://entities/character/player/character.tscn" id="2_s2lwh"]
[ext_resource type="Script" path="res://entities/character/player/PlayerIdleState.gd" id="3_tkd1d"]
[ext_resource type="Script" path="res://entities/character/player/PlayerMoveState.gd" id="4_h4yxe"]
[ext_resource type="Script" path="res://entities/character/player/PlayerJumpState.gd" id="5_di4q4"]
[ext_resource type="Script" path="res://entities/character/player/PlayerAttackState.gd" id="5_thfui"]
[ext_resource type="AudioStream" uid="uid://clgo0n33bd2iy" path="res://audio_streams/footsteps_concrete.tres" id="6_5ujef"]
[ext_resource type="Script" path="res://entities/character/player/Fighter.gd" id="8_2mumn"]
[ext_resource type="Script" path="res://entities/character/player/FootstepsPlayer.gd" id="11_7hx16"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gy51a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_42ygg"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_p38sd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_gy51a")

[node name="PlayerHSM" type="LimboHSM" parent="."]
update_mode = 0

[node name="IdleState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("3_tkd1d")

[node name="MoveState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("4_h4yxe")

[node name="AttackState" type="LimboState" parent="PlayerHSM" node_paths=PackedStringArray("_fighter")]
script = ExtResource("5_thfui")
_fighter = NodePath("../../Character/Fighter")

[node name="JumpState" type="LimboState" parent="PlayerHSM"]
script = ExtResource("5_di4q4")

[node name="Character" parent="." instance=ExtResource("2_s2lwh")]

[node name="Fighter" type="Area3D" parent="Character"]
script = ExtResource("8_2mumn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Character/Fighter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
shape = SubResource("SphereShape3D_42ygg")

[node name="FootstepsPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_5ujef")
script = ExtResource("11_7hx16")

[node name="RayCast3D" type="RayCast3D" parent="FootstepsPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)

[connection signal="anim_footstep" from="Character" to="FootstepsPlayer" method="_on_character_anim_footstep"]
[connection signal="hit" from="Character" to="." method="_on_hit"]
